fixing some layout problem

--- a/src/component/layout/header/header.module.scss
+++ b/src/component/layout/header/header.module.scss
@@ -96,7 +96,7 @@ $fontsize: 12px;
       rgba(255, 27, 194, 0) 89.74%
     );
     transition: 1s ease;
-    height: 100vh;
+    height: auto;
   }
   .header_wrapper {
     width: 100%;
